force-app/main/default/objects/Invoice__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>This field will store the due date of customers who have pending amount to pay</description>
    <label>Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>