force-app/main/default/objects/Invoice__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>This field will store the invoice biling date of customer</description>
    <label>Invoice Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>