force-app/main/default/objects/Invoice__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>This field will be auto populated when new invoice is generated</description>
    <displayFormat>INV-{000}</displayFormat>
    <label>Invoice Number</label>
    <type>AutoNumber</type>
</CustomField>