force-app/main/default/objects/Invoice__c/fields/Sales_order__c.field-meta.xml
<CustomField>
    <fullName>Sales_order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a lookup field , it will be choosing the sales order for which the invoice has to be generated</description>
    <label>Sales order</label>
    <referenceTo>Sales_order__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>