force-app/main/default/objects/Invoice__c/validationRules/amount_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>amount_validation</fullName>
    <active>true</active>
    <description>Bill amount should be greater than zero</description>
    <errorConditionFormula>Amount__c   &lt;=  0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Please the valid amount</errorMessage>
</ValidationRule>