force-app/main/default/objects/Invoice__c/validationRules/invoice_date.validationRule-meta.xml
<ValidationRule>
    <fullName>invoice_date</fullName>
    <active>true</active>
    <description>this will validate the invoice date should be in past or present date, not in future</description>
    <errorConditionFormula>Invoice_Date__c  &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Invoice_Date__c</errorDisplayField>
    <errorMessage>Please enter the valid date</errorMessage>
</ValidationRule>